<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_detalhes_produto_editar"
        android:icon="@drawable/ic_action_edit2"
        android:title="Editar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_detalhes_produto_excluir"
        android:icon="@drawable/ic_action_delete"
        android:title="Excluir"
        app:showAsAction="ifRoom"/>
</menu>